First commited as before_81946_rev6